--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,14 @@ Appium-Python-Client==5.1.0
 attrs==25.3.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
+dataclass-wizard==0.35.0
 exceptiongroup==1.2.2
 future==1.0.0
 h11==0.16.0
 idna==3.10
 iniconfig==2.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.5.0
@@ -17,11 +20,15 @@ pydantic==2.11.4
 pydantic_core==2.33.2
 PySocks==1.7.1
 pytest==8.3.5
+python-dotenv==1.1.0
+referencing==0.36.2
 requests==2.32.3
+rpds-py==0.24.0
 selene==2.0.0rc9
 selenium==4.32.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+todoist_api_python==3.0.1
 tomli==2.2.1
 trio==0.30.0
 trio-websocket==0.12.2
